--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
       function passWord() {
         var testV = 1;
         var pass1 = prompt('Please Enter Your Password',' ');
-        while (testV < 3) {
+        var success = false;
+        while (success == false) {
           if (!pass1)
-          history.go(-1);
-          if (pass1.toLowerCase() == "password") {
+          window.history.go(-1);
+          if (pass1 == "briana") {
             alert('You Got it Right!');
+            success = true;
             window.open('www.wikihow.com');
             break;
           }
-          testV+=1;
+          testV += 1;
           var pass1 =
           prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
         }
-        if (pass1.toLowerCase()!="password" & testV ==3)
-        history.go(-1);
-        return " ";
       }
     </script>
     <center>
