trying colored bg

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Hello, world!</title>
   </head>
-  <body>
+  <body background-color="#DCB0D1";>
     <script>
       function passWord() {
         var testV = 1;
@@ -36,7 +36,6 @@
         <input type="button" value="Enter Protected Area" onClick="passWord()">
       </form>
     </center>
-    <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
