2nd attempt colored bg

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 
     <title>Hello, world!</title>
   </head>
-  <body background-color="#DCB0D1";>
+  <body>
+    <style>
+      body {
+        background-color: #DCB0D1 ;
+      }
+    </style>
     <script>
       function passWord() {
         var testV = 1;
