chandging back to pink

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <style>
       body {
-        background-color: black ;
+        background-color: #DCB0D1 ;
       }
     </style>
     <script>
